css/ticket.css
.title1, .title2, .tickethead, label, #LTicket, #RTicket{
    font-weight: bold;
}
.title1{
    margin-top: 40px;
    margin-left: 45%;
    font-weight: bolder; 
}

.title2{
    margin-left: 13%;
    margin-top: 10%;
}

#sticket{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin: 2% auto;
    padding: 20px; 
    width: 75%;
    background-color: #00568F;
    border-radius: 25px;
}

.tickethead, .l1, .l2{
    text-align: center;
    color: #ffff;
}

.input-group{
    display: block;
    justify-content: space-evenly;
    width: 30%; 
    margin: auto;
}

.form-select{
    margin-top: 5%; 
}

#o1, #o2{
    margin-right: 20%;
    width: fit-content;
    max-width: fit-content;
    min-width: fit-content;
}

.yt{
    display: flex;
    margin: 5% auto;
}

.lsection, .rsection{
    flex-flow: column;
    position: absolute;
    bottom: 10%;
    background-color: #00568F;
    color: #ffff;
    padding: 32px;
}

.lsection{
    left: 15%;
}

.rsection{
    right: 15%;
}
.content-wrapper {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

@media (max-width: 665px){
    .title1{
        margin-left: 10%; 
    }

    .title2{
        margin-left: 5%; 
    }

    #sticket{
        padding: 20px; 
        flex-direction: column; 
    }

    .input-group{
        width: 90%; 
    }

    #o1, #o2{
        margin-right: 0; 
        width: 100%; 
    }

    .yt{
        flex-direction: column; 
    }

    .lsection, .rsection{
        width: 100%; 
        position: relative; 
        left: 0; 
        right: 0; 
        margin-top: 20px; 
    }
}

